--- a/Homework9/carousel/index.html
+++ b/Homework9/carousel/index.html
@@ -167,9 +167,9 @@
     <div class="row">
       <div class="col-lg-4"></div>
       <div class="col-lg-4">
+        <img src="../vizualization/Captura.PNG" class="shadow-lg p-3 mb-5 bg-dark img-fluid rounded max-width:100% d-block mt-5"  alt="Responsive image">
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-        <h2>Heading</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+        <h2>Juan Ramón Félix Alvarez Tostado</h2>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-lg-4"></div>
