--- a/Homework9/carousel/index.html
+++ b/Homework9/carousel/index.html
@@ -167,8 +167,7 @@
     <div class="row">
       <div class="col-lg-4"></div>
       <div class="col-lg-4">
-        <img class="bd-placeholder-img rounded-circle" src="../vizualization/Captura.PNG"  alt="Responsive image">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: 140x140"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img class="bd-placeholder-img rounded-circle" src="../vizualization/Captura.PNG"  alt="Responsive image" width="140" height="140" >
         <h2>Juan Ramón Félix Alvarez Tostado</h2>
         <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
       </div>
