--- a/Homework9/carousel/index.html
+++ b/Homework9/carousel/index.html
@@ -169,7 +169,7 @@
       <div class="col-lg-4">
         <img class="bd-placeholder-img rounded-circle" src="../vizualization/Captura.PNG"  alt="Responsive image" width="140" height="140" >
         <h2>Juan Ramón Félix Alvarez Tostado</h2>
-        <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+        <p><a class="btn btn-secondary" href="https://github.com/Jrfelix13" role="button">View details &raquo;</a></p>
       </div>
       <div class="col-lg-4"></div>
     </div><!-- /.row -->
