--- a/Homework9/carousel/Humidity.html
+++ b/Homework9/carousel/Humidity.html
@@ -100,7 +100,7 @@
     <div class="row featurette">
       <div class="col-md-7">
         <h2 class="featurette-heading">Humidity. </h2>
-        <p class="lead">As we can see on the graph the cloudiness do not seem to be affected by the latitude.</p>
+        <p class="lead">As we can see on the graph the humidity do not seem to be affected by the latitude.</p>
       </div>
       <div class="col-md-5">
         <img src="../vizualization/Humidity.PNG" class="card-img-top" alt="Responsive image">
